examples/errors/invalid-names.rcp
enum channel {ch}
enum a {foo, bar}
property-variables: x : bool

agent Agent
    local: counter : int, agent: bool, true: int
    init: true

    repeat: (
                label: {counter == 0} ch! true () [counter := 1]
            )

system = Agent(one, true) || Agent(two, true) || Agent(three, true)

// This example should trigger the following errors:
// Expecting token of type 'ID' but found `agent`. [Ln 6, Col 27]
// Expecting token of type 'repeat' but found `agent`. [Ln 6, Col 27]
// Expecting token of type 'ID' but found `:`. [Ln 6, col 32]
// Expecting token of type 'system' but found `:`.
// TODO this example should also flag 'Agent' [Ln 5] as an invalid name (Issue #17)